--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "description": "Личный проект «Кэт энерджи» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
-    "autoprefixer": "9.5.x",
-    "browser-sync": "2.26.x",
+    "autoprefixer": "^9.5.1",
+    "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-csso": "^4.0.1",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-less": "4.0.x",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-jsmin": "^0.1.5",
+    "gulp-less": "^4.0.1",
     "gulp-minify": "^3.1.0",
-    "gulp-plumber": "1.2.x",
-    "gulp-postcss": "8.0.x",
-    "gulp-sourcemaps": "2.6.x",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-posthtml": "^3.0.4",
+    "gulp-rename": "^2.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-svgstore": "^7.0.1",
+    "gulp-webp": "^4.0.1",
     "posthtml": "^0.13.0",
     "posthtml-include": "^1.4.3",
     "rename": "^1.0.4",
@@ -45,11 +52,6 @@
     "node": "8.16"
   },
   "dependencies": {
-    "gulp-csso": "^4.0.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-posthtml": "^3.0.4",
-    "gulp-rename": "^2.0.0",
-    "gulp-webp": "^4.0.1",
     "svgstore": "^3.0.0-2"
   }
 }
