--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-csso": "^4.0.1",
     "gulp-htmlmin": "^5.0.1",
@@ -24,6 +25,7 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
+    "less": "^3.11.1",
     "posthtml": "^0.13.0",
     "posthtml-include": "^1.4.3",
     "rename": "^1.0.4",
